--- a/app/src/main/res/layout/fragment_receipt_detail.xml
+++ b/app/src/main/res/layout/fragment_receipt_detail.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/receipt_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,19 +13,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/receipt_detail_title_holder"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="КАССОВЫЙ ЧЕК"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:background="@color/color_f8">
+
+            <TextView
+                android:id="@+id/receipt_detail_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_regular"
+                android:text="КАССОВЫЙ ЧЕК"
+                android:textColor="@color/color19"
+                android:textSize="20sp" />
+        </FrameLayout>
 
         <TextView
+            android:id="@+id/receipt_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:text="приход" />
+            android:fontFamily="@font/roboto_medium"
+            android:paddingStart="10dp"
+            android:text="приход"
+            android:textColor="@color/color_c0" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,38 +47,28 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/static_sale_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Продажа №"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
                 android:id="@+id/sale_number"
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
-                android:text=""
-                app:layout_constraintLeft_toRightOf="@id/static_sale_number"
+                android:fontFamily="@font/roboto_medium"
+                android:paddingStart="10dp"
+                android:text="@string/receipt_detail_sale_num"
+                android:textColor="@color/black"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="12345" />
+                tools:text="Продажа №12345" />
 
             <TextView
                 android:id="@+id/session_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:fontFamily="@font/roboto_medium"
+                android:paddingEnd="10dp"
+                android:text="@string/receipt_detail_session_id"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="55" />
-
-            <TextView
-                android:id="@+id/static_shift_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Смена №"
-                app:layout_constraintRight_toLeftOf="@id/session_id"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:text="Смена № 55" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -76,13 +81,7 @@
                 android:id="@+id/position_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_position"/>
-
-            <!--<TextView
-                android:id="@+id/position_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Positions" />-->
+                tools:listitem="@layout/item_position" />
         </FrameLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,9 +89,11 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/static_total_cost"
+                android:id="@+id/title_total_cost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/roboto_regular"
                 android:text="Общая стоимость"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -101,23 +102,27 @@
                 android:id="@+id/total_cost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/roboto_regular"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="20000" />
 
             <TextView
-                android:id="@+id/static_discount"
+                android:id="@+id/title_discount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_regular"
                 android:text="Скидка"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/static_total_cost" />
+                app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
+                app:layout_constraintTop_toBottomOf="@id/title_total_cost" />
 
             <TextView
                 android:id="@+id/discount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toRightOf="parent"
+                android:fontFamily="@font/roboto_regular"
+                app:layout_constraintRight_toRightOf="@id/total_cost"
                 app:layout_constraintTop_toBottomOf="@id/total_cost"
                 tools:text="20000" />
 
@@ -125,17 +130,17 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/static_discount" />
+                app:layout_constraintTop_toBottomOf="@+id/title_discount" />
 
             <TextView
-                android:id="@+id/static_total"
+                android:id="@+id/title_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Итог"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:textStyle="bold"
                 android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
                 app:layout_constraintTop_toTopOf="@id/divider" />
 
             <TextView
@@ -143,36 +148,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                tools:text="2220"
-                app:layout_constraintRight_toRightOf="parent"
-                android:textStyle="bold"
                 android:textSize="18sp"
-                app:layout_constraintTop_toTopOf="@id/divider" />
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="@+id/total_cost"
+                app:layout_constraintTop_toTopOf="@id/divider"
+                tools:text="2220" />
 
             <TextView
                 android:id="@+id/nds_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_regular"
                 android:text="Сумма без НДС"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/static_total" />
+                app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
+                app:layout_constraintTop_toBottomOf="@id/title_total" />
 
             <TextView
                 android:id="@+id/nds"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                tools:text="115"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/static_total" />
+                app:layout_constraintRight_toRightOf="@+id/total_cost"
+                app:layout_constraintTop_toBottomOf="@id/title_total"
+                tools:text="115" />
 
             <TextView
-                android:textSize="13sp"
-                android:id="@+id/static_cash"
+                android:id="@+id/title_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_regular"
                 android:text="НАЛИЧНЫМИ"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:textSize="13sp"
+                app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
                 app:layout_constraintTop_toBottomOf="@id/nds_type" />
 
             <TextView
@@ -180,20 +187,121 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                tools:text="114"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/nds" />
+                app:layout_constraintRight_toRightOf="@+id/total_cost"
+                app:layout_constraintTop_toBottomOf="@id/nds"
+                tools:text="114" />
 
             <View
                 android:id="@+id/divider_cred"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/static_cash" />
+                app:layout_constraintTop_toBottomOf="@+id/title_payment" />
+
+            <ImageView
+                android:id="@+id/diplomat_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:src="@drawable/ic_diplomat_receipt_detail"
+                app:layout_constraintLeft_toLeftOf="@id/title_payment"
+                app:layout_constraintTop_toTopOf="@id/divider_cred" />
+
+            <TextView
+                android:id="@+id/shop_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_16"
+                android:fontFamily="@font/roboto_medium"
+                app:layout_constraintLeft_toRightOf="@id/diplomat_icon"
+                app:layout_constraintTop_toTopOf="@id/diplomat_icon"
+                tools:text="OOO ''Астория''" />
+
+            <TextView
+                android:id="@+id/shop_address_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="@id/shop_name"
+                app:layout_constraintTop_toBottomOf="@+id/shop_name"
+                tools:text="346500, Ростовская область, г.Шахты," />
+
+            <TextView
+                android:id="@+id/shop_address_street"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="@id/shop_name"
+                app:layout_constraintTop_toBottomOf="@+id/shop_address_city"
+                tools:text="ул.Шевченко 141" />
+
+            <ImageView
+                android:id="@+id/user_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:src="@drawable/ic_user_icon"
+                app:layout_constraintLeft_toLeftOf="@id/title_payment"
+                app:layout_constraintTop_toBottomOf="@id/shop_address_street" />
+
+            <TextView
+                android:id="@+id/title_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:text="Кассир"
+                app:layout_constraintLeft_toLeftOf="@id/shop_name"
+                app:layout_constraintTop_toTopOf="@id/user_icon"
+                tools:text="Кассир" />
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintRight_toRightOf="@+id/total_cost"
+                app:layout_constraintTop_toTopOf="@+id/title_user_name"
+                tools:text="Чупахина Оксана" />
+
+            <ImageView
+                android:id="@+id/location_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:src="@drawable/ic_place_icon"
+                app:layout_constraintLeft_toLeftOf="@id/title_payment"
+                app:layout_constraintTop_toBottomOf="@id/title_user_name" />
+
+            <TextView
+                android:id="@+id/title_payment_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:text="Место расчетов"
+                app:layout_constraintLeft_toLeftOf="@id/shop_name"
+                app:layout_constraintTop_toTopOf="@id/location_icon"
+                tools:text="Место расчетов" />
+
+            <TextView
+                android:id="@+id/payment_location_address_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="@id/title_payment_location"
+                app:layout_constraintTop_toBottomOf="@+id/title_payment_location"
+                tools:text="346500, Ростовская область, г.Шахты," />
+
+            <TextView
+                android:id="@+id/payment_location_address_street"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="@id/shop_name"
+                app:layout_constraintTop_toBottomOf="@+id/payment_location_address_city"
+                tools:text="ул.Шевченко 141" />
+
+            <View
+                android:id="@+id/divider_shop_info"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toBottomOf="@+id/payment_location_address_street" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </LinearLayout>
 </ScrollView>
