--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,6 +55,7 @@
     <color name="light_divider">#14212121</color>
     <color name="dark_divider">#707070</color>
     <color name="color_c4">#C4C4C4</color>
+    <color name="color_da">#DDDADA</color>
 
 
 
