--- a/app/src/main/res/layout/tab_layout_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_fragment.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabMaxWidth="0dp"
+        
+
+        app:tabContentStart="0dp"
         app:fontFamily="@font/roboto_regular"
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
