--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
     <color name="dark_divider">#707070</color>
     <color name="color_c4">#C4C4C4</color>
     <color name="color_da">#DDDADA</color>
+    <color name="color_e7">#E7E7E7</color>
 
 
 
