--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Test_evo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Test_evo" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
@@ -14,8 +14,19 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="NoActionBar" parent="Theme.Test_evo">
+    <style name="NoActionBar" parent="Test_evo">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+
+   <!-- https://habr.com/ru/post/456178/-->
+    <!--<style name="LightThemeSwitchQ" parent="NoActionBar">
+        <item name="switchStyle">@style/MySwitchStyle</item>
+        <item name="colorPrimary">@color/background_dt</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+    </style>-->
+
+
 </resources>
