--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="SVLightTheme" parent = "Widget.AppCompat.CompoundButton.Switch">
+    <style name="SVLightTheme" parent = "NoActionBar">
         <item name="thumbTint">@color/selector_switch_thumb</item>
         <item name="android:colorForeground">@color/divider_lt</item>
     </style>
 
     <!--http://developer.alexanderklimov.ru/android/views/switch.php-->
-    <style name="SVDarkTheme" parent="Widget.AppCompat.CompoundButton.Switch">
+    <style name="SVDarkTheme" parent="NoActionBar">
         <item name="colorControlActivated">@color/icon_dt</item>
         <item name="colorSwitchThumbNormal">@color/active_fonts_dt</item>
         <item name="android:colorForeground">@color/divider_dt</item>
